crates/python_parser/tests/snapshots/invalid_syntax@expressions__await__no_expression_1.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/invalid/expressions/await/no_expression_1.py
---
## AST

```
Module(
    ModModule {
        range: 0..85,
        body: [
            Expr(
                ExprStmt {
                    range: 59..64,
                    value: Await(
                        AwaitExpr {
                            range: 59..64,
                            value: Name(
                                NameExpr {
                                    range: 64..64,
                                    id: Name(""),
                                    ctx: Invalid,
                                },
                            ),
                        },
                    ),
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 66..85,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 70..73,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 73..75,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Pass(
                            PassStmt {
                                range: 81..85,
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # No expression after `await`, a statement on another line
2 | await
  |      ^ Syntax Error: Expected an expression
3 | 
4 | def foo():
5 |     pass
  |
